Add TypeScript documentation covering basic data types, arrays, objects, tuples, enums, and type assertions with examples.

--- a/kim/documents/3-4.typescript의_유형.md
+++ b/kim/documents/3-4.typescript의_유형.md
@@ -99,3 +99,47 @@ function getDsrGrade(ratio: number): DsrGrade {
   return DsrGrade.DANGER;
 }
 ```
+
+# 4. type assertion
+
+```tsx
+let empty = [];
+
+// 값이 있는 배열
+let numbers = [1, 2, 3]; // number[]
+let names = ["철수", "영희"]; // string[]
+let mixed = [1, "hello", true]; // (number | string | boolean)[]
+
+// 객체 배열
+let users = [
+  { name: "철수", age: 25 },
+  { name: "영희", age: 30 },
+];
+// { name: string; age: number }[] 로 추론
+```
+
+타입 병시가 필요한 경우
+
+```tsx
+// 1. 함수 매개변수 (필수!)
+function calculate(income: number, debt: number) {}
+
+// 2. 빈 배열/객체
+let loans: LoanInfo[] = [];
+let data: Record<string, number> = {};
+
+// 3. 복잡한 타입
+interface DsrResult {
+  ratio: number;
+  status: string;
+  grade: string;
+}
+let result: DsrResult | null = null;
+
+// 4. API 응답 (타입 단언)
+const response = await fetch("/api/dsr");
+const data = (await response.json()) as DsrResult;
+
+// 5. 함수 반환 타입 (명확성을 위해)
+function calculateDsr(income: number, debt: number): DsrResult {}
+```
